--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 #/.gitignore
-#.project
-#.classpath
-#.settings/
+/.project
+/.classpath
+/.settings/
 #build.properties
 #build.xml
 #default.properties
 /local.properties
 /bin/
 /gen/
-#res/values/dropbox.xml
 #proguard.cfg
-#/AndroidManifest.xml
 /target/
