--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@ You should have received a copy of the GNU General Public License along with Tod
 @author Todo.txt contributors <todotxt@yahoogroups.com>
 @license http://www.gnu.org/licenses/gpl.html
 @copyright 2009-2013 Todo.txt contributors (http://todotxt.com)
---><manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="43" android:versionName="1.0-SNAPSHOT" package="com.todotxt.todotxttouch">
+--><manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="45" android:versionName="1.0-SNAPSHOT" package="com.todotxt.todotxttouch">
 
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="17"/>
 
@@ -46,7 +46,7 @@ You should have received a copy of the GNU General Public License along with Tod
 key: gdb3yesuszz3bk8
 secret: 6np5yqalilylpc0
  -->
-				 <data android:scheme="db-gdb3yesuszz3bk8"/>
+				 <data android:scheme="db-1w4c3tyonxdyfvk"/>
 
 
                 <action android:name="android.intent.action.VIEW"/>
